# manga_download

./: .nfs00000000000684ad00000002  Dockerfile  README.md  build  pyproject.toml  run  test
brmanga/: chapter.py  funcutils.py  main.py  manga.py  page.py  service.py
tests/: chapter_test.py  funcutils_test.py  manga_test.py  page_test.py  service_test.py
